# arc

./: .clangd  .gitignore  CMakeLists.txt  README.md  bindings.cpp  lib.cpp  lib.hpp  main.cpp  test.js
cpp/: lib.hpp  main.cpp
data/: out.lvk88
pkg/: emarclib-types.d.ts  emarclib.js
www/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/src/: gmshworker.ts  index.html  index.ts  message.ts  styles.css  u2networker.ts
